# VergjornRemake

./: .$Vergjorn.drawio.bkp  .$VergjornRemakeTurnBasedCombat.drawio.bkp  .$VergjornRemakeTurnBasedCombat.drawio.dtmp  .$VergjornSocietyFlowchart.drawio.bkp  README.md  Vergjorn.drawio  VergjornRemake.uproject  VergjornRemakeTurnBasedCombat.drawio  VergjornSocietyFlowchart.drawio
Config/: DefaultEngine.ini  DefaultInput.ini
Content/Blueprints/: BuildingManager_BP.uasset  BuildingPurchaseWidget.uasset  GoldMine_BP.uasset  GoldMine_BP1.uasset  GoldMine_BP2.uasset  HUD_BP.uasset  LoggingHut_BP.uasset  Main_HUD_BP.uasset  Player_BP.uasset  ResourceWidget_BP.uasset  ResourcesHUD_BP.uasset  SelectionInterface.uasset  TestStructure.uasset  VergjornRemakeGameMode_BP.uasset  WorkerUnit_BP.uasset  Worker_BP.uasset
Content/Maps/: MainMap.umap
Content/Meshes/: TallCube.uasset
Source/: VergjornRemakeEditor.Target.cs
Source/VergjornRemake/: BuildingManager.cpp  (+23 more)
VergjornSimulator/: CMakeLists.txt
VergjornSimulator/scripts/: plot_all.py  plot_economy.py  plot_map.py  plot_needs.py  plot_population.py
VergjornSimulator/src/: main.cpp
VergjornSimulator/src/core/: Economy.cpp  Economy.h  JobBoard.cpp  JobBoard.h  MathTypes.h  SimTime.cpp  SimTime.h  Tags.h
VergjornSimulator/src/output/: StatsWriter.cpp  StatsWriter.h
VergjornSimulator/src/sim/: Building.h  FishingSpot.h  OreDeposit.h  TreeNode.h  Villager.h  WorldSim.cpp  WorldSim.h
VergjornSimulator/src/world/: MapGen.cpp  MapGen.h  MapRenderer.cpp  MapRenderer.h  MapZone.h
Version2/: VergjornRemaster.uproject
(+1044 files in other folders)
